Increase spacing between elements on offcanvas to 16px. Add additional stop for side navigation sizing. Add spacing between header and content on mobile. Increase size of links in footer.

--- a/src/htdocs/css/_banner.scss
+++ b/src/htdocs/css/_banner.scss
@@ -3,6 +3,7 @@
 	height:56px;
 	position:relative;
 	background-color:$banner-background-color;
+	margin-bottom:0.5rem;
 
 	/* position usgs logo over background image. */
 	> .site-logo {
