--- a/src/htdocs/css/_offcanvas.scss
+++ b/src/htdocs/css/_offcanvas.scss
@@ -59,7 +59,7 @@
 			width:$offcanvas-width;
 
 			background-color:#FFF;
-			padding:0 $spacing/2 0;;
+			padding:0 $spacing;
 			z-index:1002;
 
 			overflow-y:auto;
