--- a/src/htdocs/css/_page.scss
+++ b/src/htdocs/css/_page.scss
@@ -42,14 +42,25 @@
 	.page {
 		padding: $vertical-spacing $horizontal-spacing $vertical-spacing 0;
 		float: right;
-		width: 100% - $side-column-width;
+		width: 75%;
 	}
 
 	.site-footer {
 		float: left;
-		width: $side-column-width;
+		width: 25%;
 	}
 
+}
+
+
+@media screen and (min-width: 1200px) {
+	.page {
+		width: 100% - $side-column-width;
+	}
+
+	.site-footer {
+		width: $side-column-width;
+	}
 }
 
 @media print {
